# titan

./: .env.example  .gitignore  API_ENDPOINTS_FOR_FRONTEND.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  test_skf.py
migrations/: env.py
migrations/versions/: 09da51fa6609_added_currency_field_to_offermodel_made_.py  16f5ad85c442_added_currency_field_to_offermodel.py  2f5ab0af4028_qotaq_first_migration.py  3b2f8d2c9f1a_add_price_validity_fields.py  75bd30c230b2_add_offers.py  7810a3cca48e_added_default_roles_extended_fields.py  7d8d8e4fbcd6_initial_full_schema.py  7e1eded8d7aa_add_email_message_id_to_prices.py  9a040ff26e4b_initial_schema.py  a9b8c7d6e5f4_catch_up_sync_pt2.py  b3e0d25554e3_added_hash_password_to_users.py  ce9482466602_prices_add_source_type_email_message_id_.py  de730523fed5_add_username_to_users.py  ed324688a18f_add_status_to_price_model.py  f24e199e50da_add_ai_fields_to_offer_items.py  f3b2e1a9c8d7_catch_up_sync.py
scripts/: debug_fuchs_parser.py  debug_outlook_fetch.py  e2e_fuchs_email.py
src/: main.py
src/api/: dependencies.py
src/app/: config.py  lifespan.py  main.py
src/core/: auth.py  bitrix.py  constants.py  enums.py  exceptions.py  graph_auth.py  rbac.py  utils.py
src/db/: initialize.py
src/repositories/: analog_repo.py  price_repo.py  user_repo.py
src/schemas/: extraction_schema.py  price_schema.py  user_schema.py
src/services/: analog_ai_search.py  analog_parser.py  audit_service.py  bitrix_service.py  deal_service.py  excel_parser.py  fuchs_parser.py  fuchs_pipeline.py  (+10 more)
tests/: conftest.py
(+38 files in other folders)
